Refactoring - force CentOS - still not clear how to work with Docker and Podman

--- a/gcpsdk/roles/provision/tasks/main.yml
+++ b/gcpsdk/roles/provision/tasks/main.yml
@@ -27,7 +27,7 @@
 - name: Make sure we have all the packages we may need
   yum:
     name:
-      - libselinux-python
+#     - libselinux-python
       - yum-utils
       - vim
       - wget
