--- a/gcpsdk/roles/docker/tasks/main.yml
+++ b/gcpsdk/roles/docker/tasks/main.yml
@@ -5,57 +5,21 @@
     name: "docker"
     gid: "2200"
  
-- name: include storage prep
-  include_tasks: dck-ce-storage-setup.yml
+- name: Install Docker form the distro repos for Fedora (Docker release 13, I think ?)
+  include_tasks: docker-rh-repo.yml
+  when:
+    ansible_os_family == "RedHat" and ansible_distribution == "Fedora" and ansible_distribution_major_version|int >= 29
+  tags: fedora
 
-# - name: create the "Docker Engine Comunity" repo
-#   command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-#   name: "docker-ce"
-#   file: https://download.docker.com/linux/centos/docker-ce.repo
-#   state: present
+- name: Install Docker-CE on RHEL or CentOS 7+
+  include_tasks: docker-ce.yml
+  when:
+    ansible_os_family == "RedHat" and ansible_distribution != "Fedora" and ansible_distribution_major_version|int >= 7
+  tags: rhel7
 
-- name: create the "Docker Engine Comunity" repo
-  get_url:
-    url: "https://download.docker.com/linux/centos/docker-ce.repo"
-    dest: "/etc/yum.repos.d/docker-ce.repo"
-
-- name: configure and activate the "bridge-nf-call-iptables" kernel parameter
-  lineinfile:
-    path: /etc/sysctl.d/92-bridge-nf-call-iptables.conf
-    line: "net.bridge.bridge-nf-call-{{ item }} = 1"
-    state: present
-    create: True
-  loop:
-    - "iptables"
-    - "ip6tables"
-
-- name: install Docker-CE and auxiliary...
-  yum:
-    name:
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
-#     - lvm2
-    state: present
-
-- name: directory "/etc/docker"
-  file:
-    path: /etc/docker
-    state: directory
-
-- name: create the "daemon.json" for Docker
-  copy:
-    src: daemon.json
-    dest: /etc/docker/daemon.json
-    force: True
-
-- name: ... and make sure the service is enabled & started
-  service:
-    name: "{{ item }}"
-    state: started
-    enabled: True
-  with_items:
-    - docker
-  tags: docker
+- name: In case none of the above, we give up 
+  debug:
+    msg: "EXIT !"
+- meta: end_play
 
 
