--- a/gcpsdk/playbooks/gcpsdk.yml
+++ b/gcpsdk/playbooks/gcpsdk.yml
@@ -1,12 +1,12 @@
 ---
-- name : Play 01 - setup
+- name : GCP SDK installation
   hosts: gcpsdk
   become: True
   gather_facts: True
 
   tasks:
-    - name: execute "roles" playbooks
-      include_role:
+#   - name: execute "roles" playbooks
+    - include_role:
         name: "{{ mk_role }}"
       loop:
           - roles/gcpsdk
