--- a/gcpsdk/playbooks/wait-reboot.yml
+++ b/gcpsdk/playbooks/wait-reboot.yml
@@ -1,12 +1,12 @@
 ---
-- name : Play 01 - Wait for Reboot
+- name : Wait for Reboot
   hosts: gcpsdk
   become: True
   gather_facts: False
 
   tasks:
-    - name: Wait for the reboot to complete
-      wait_for_connection:
+#   - name: Wait for the reboot to complete
+    - wait_for_connection:
         connect_timeout: 10
         sleep: 5
         delay: 5
