Include Git among the packages to install

--- a/gcpsdk/roles/gcpsdk/tasks/main.yml
+++ b/gcpsdk/roles/gcpsdk/tasks/main.yml
@@ -12,6 +12,7 @@
       - google-cloud-sdk
       - google-cloud-sdk-app-engine-python
       - kubectl
+      - git
     state: present
   tags:
     - gcpsdk
